[viz] Set needs_begin_frames_ in CLTFS

Bug: 768381
Change-Id: I22caaeb74d37deebfda7118b7271739b27f74fa3
Reviewed-on: https://chromium-review.googlesource.com/686494
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Commit-Queue: Eric Seckler <eseckler@chromium.org>
Cr-Commit-Position: refs/heads/master@{#504637}
Former-commit-id: 50b050167d6fd83aca749c8e04e993c73554cfc3